Fix bug of jumping buttons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,6 @@ h1 {
   background-image: -webkit-radial-gradient(circle, #ffc107 19%,#e1f6e6 76%);
   background-clip: text;
   -webkit-background-clip: text;
-  text-fill-color: transparent;
   -webkit-text-fill-color: transparent;
 
 }
@@ -568,7 +567,7 @@ text {
     text-decoration: none;
     border-radius: 10rem;
     padding: 0.8rem 1.7rem;
-    border: #ECECEB solid 0.2rem;
+    border: #ECECEB solid 3px;
     background-color: #0c4c6c;
     color: #fff;
     text-shadow: 0px 15px 25px rgba(0, 0, 0, .15), 0px 5px 10px rgba(0, 0, 0, .05);
@@ -582,15 +581,32 @@ text {
     background-color: #ffffff;
     color: #0c4c6c;
     font-weight: 600;
-    -webkit-filter: drop-shadow(5px 5px 5px #222);
-    filter: drop-shadow(5px 5px 5px #222);
-    border: #0c4c6c solid 0.2rem;
+    -webkit-filter: drop-shadow(5px 5px 5px #082f43);
+    filter: drop-shadow(5px 5px 5px #082f43);
+    border: #0c4c6c solid 3px;
 }
 
 .btn:disabled {
     opacity: 0.6;
     cursor: not-allowed;
 }
+
+.light {
+    background-color: #ffffff;
+    color: #0c4c6c;
+    font-weight: 600;
+    -webkit-filter: drop-shadow(5px 5px 5px #082f43);
+    filter: drop-shadow(5px 5px 5px #082f43);
+    border: #0c4c6c solid 3px;
+    margin: .8rem 0 .8rem;
+}
+
+.light:hover {
+    border: #ECECEB solid 0.2rem;
+    background-color: #0c4c6c;
+    color: #fff;
+}
+
 
 .form {
     padding: 0 2rem 2rem;
@@ -682,22 +698,6 @@ tr td:nth-child(2) {
 
 tr td:last-child {
     text-align: center;
-}
-
-.light {
-    background-color: #ffffff;
-    color: #0c4c6c;
-    font-weight: 600;
-    -webkit-filter: drop-shadow(5px 5px 5px #222);
-    filter: drop-shadow(5px 5px 5px #222);
-    border: #0c4c6c solid 0.2rem;
-    margin: .8rem 0 .8rem;
-}
-
-.light:hover {
-    border: #ECECEB solid 0.2rem;
-    background-color: #0c4c6c;
-    color: #fff;
 }
 
 /* Footer */
